--- a/templates/map/ugc_choice.html
+++ b/templates/map/ugc_choice.html
@@ -8,11 +8,11 @@
 			<div class="col-md-12">
 				<h1 class="text-center">What would you like to add?</h1>
 				<br />
-				<p class="text-center">
+				<div class="text-center">
 					<a href="{% url 'add_image' feature.id %}" class="btn btn-default btn-lg">An Image</a> 
-					<a href="{% url 'add_document' feature.id %}" class="btn btn-default btn-lg">Memories or Research</a> 
+					<a href="{% url 'add_document' feature.id %}" class="btn btn-default btn-lg">Text</a> 
 					<a href="{% url 'add_media' feature.id %}" class="btn btn-default btn-lg">Audio or Video</a> 
-				</p>
+				</div>
 			</div>
 		</div>
 	</div>
