--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -4,58 +4,65 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-xs-12 col-md-7">
-			<h1>Add Memories or Research About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h1>
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
+			<h2>Add Text About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h2>
 			<hr />
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
+	<div class="row ugc-content-form-container">
 		<form id="document_form" method="post" {% if document.id %} action="{% url 'edit_document' feature.id document.id %}" {% else %}  action="{% url 'add_document' feature.id %}" {% endif %}>
-			<div class="col-xs-12 col-md-7">
+			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				{% load crispy_forms_tags %}
 				{% csrf_token %}
 				{{ form|crispy }}
 			</div>
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				<input type="submit" name="submit" value="Save Draft" class="btn btn-default"/>
 				<input type="submit" name="publish" value="Submit" class="btn btn-primary"/>
-				
 			</div>
 		</form>
 	</div>
 </div>
+<div class="editor-help">
+	<div class="row">
+		<div class="col-xs-12">
+			<button class="btn btn-default btn-sm toggle-help pull-right">Hide Help</button>
+			<h3 class="text-center">Help</h3>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-4">
+				<h4>What We're Looking For</h4>
+				<p>We're looking for people's memories or knowledge of Whitechapel. If you know something about the history of this building, or have a memory of what it used to be like, you can add it here.</p>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<h4>Using the Editor</h4>
+				<p>Highlight text to show the editing toolbar. You can add footnotes by putting a reference like this [^1] in the text, followed by [^1]: with the footnote content at the end.</p>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<h4>Help People Find Your Content</h4>
+				<p>Give your text a title and add one or two tags. For example, if you've got a memory of a particular time, you could tag it '1960s'.</p>
+			</div>
+		</div>
+	</div>
+</div>
+
 {% load staticfiles %}
 <script src="{% static 'js/ugc_functions.js' %}"></script>
 
 <script>
 
-var data = [{% for tag in tags %}'{{ tag }}',{% endfor %}]
+// var data = [{% for tag in tags %}'{{ tag }}',{% endfor %}]
 
-$('#id_tags').select2({
-	tags: true,
-	data: data,
-});
-
+// $('#id_tags').select2({
+//	tags: true,
+//	data: data,
+//});
 </script>
 
 
 {% endblock %}
 
 {% block footer %}
-<!--<footer class="footer navbar-fixed-bottom editor-help">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-md-4">
-				<h3 class="text-muted">Formatting Help</h3>
-				<p class="text-muted">Highlight text to show formatting toolbar.<br />
-				A footnote reference looks like this:[^1]<br />
-				[^1]: The footnote content looks like this.</p>
-			</div>
-		</div>
-	</div>
-</footer>-->
 {% endblock %}
