--- a/templates/map/add_media.html
+++ b/templates/map/add_media.html
@@ -4,23 +4,19 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-xs-12 col-md-7">
-			<h1>Add Video or Audio About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h1>
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
+			<h2>Add Video or Audio About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h2>
 			<hr />
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
+	<div class="row ugc-content-form-container">
 		<form id="document_form" method="post" {% if media.id %} action="{% url 'edit_media' feature.id media.id %}" {% else %}  action="{% url 'add_media' feature.id %}" {% endif %} enctype="multipart/form-data">
-			<div class="col-xs-12 col-md-7">
+			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				{% load crispy_forms_tags %}
 				{% csrf_token %}
 				{{ form|crispy }}
 			</div>
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				<input type="submit" name="submit" value="Save" class="btn btn-default"/>
 				<input type="submit" name="publish" value="Submit" class="btn btn-primary"/>
 				
@@ -28,18 +24,33 @@
 		</form>
 	</div>
 </div>
+<div class="editor-help">
+	<div class="row">
+		<div class="col-xs-12">
+			<button class="btn btn-default btn-sm toggle-help pull-right">Hide Help</button>
+			<h3 class="text-center">Help</h3>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-4">
+				<h4>What We're Looking For</h4>
+				<p>If you've found or uploaded a video or audio about this building or its history to YouTube, Vimeo, or SoundCloud, you can add it here.</p>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<h4>How to Contribute Video or Audio</h4>
+				<p>Paste the URL of the video or audio into the box above and it will be embedded automatically.</p>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<h4>Help People Find Your Content</h4>
+				<p>Give your video a title and add one or two tags. For example, if you've got a memory of a particular time, you could tag it '1960s'.</p>
+			</div>
+		</div>
+	</div>
+</div>
 {% load staticfiles %}
 <script src="{% static 'js/ugc_functions.js' %}"></script>
 {% endblock %}
 
 {% block footer %}
-<!--<footer class="footer navbar-fixed-bottom editor-help">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				
-			</div>
-		</div>
-	</div>
-</footer>-->
 {% endblock %}
