--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -42,7 +42,7 @@
 	    			<ul class="nav navbar-nav navbar-right">
 	    			{% if user.is_authenticated %}
 	    				<li class="dropdown">
-	    					<a id="userLinksLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <span class="visible-xs-inline">{% if user.userprofile.display_name %}{{ user.userprofile.display_name }}{% else %}{{ user }}{% endif %}</span> <span class="caret"></span></a>
+	    					<a id="userLinksLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> {% if user.userprofile.display_name %}{{ user.userprofile.display_name }}{% else %}{{ user }}{% endif %} <span class="caret"></span></a>
 	    					<ul class="dropdown-menu" aria-labelledby="userLinksLabel">
 	    						<li><a href="{% url 'user_overview' %}">Your Submissions</a></li>
 	    						<li><a href="{% url 'user_profile' %}">Edit Profile</a></li>
