--- a/templates/map/ugc_thanks.html
+++ b/templates/map/ugc_thanks.html
@@ -9,10 +9,10 @@
 				<h1 class="text-center">Thank You.</h1>
 				<br />
 				<p class="text-center">Your contribution will be moderated by a Survey of London editor shortly.</p>
-				<p class="text-center">
+				<div class="text-center">
 					<a href="{% url 'detail' feature.id %}" class="btn btn-default btn-lg">Return to {{ feature }}</a> 
 					<a href="{% url 'user_overview' %}" class="btn btn-default btn-lg">See All Your Contributions</a>
-				</p>
+				</div>
 			</div>
 		</div>
 	</div>
