--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -4,6 +4,8 @@
 		<title>Survey of London {{ subtitle }}</title>
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Stop search engines indexing the page for the timebeing. TURN OFF BEFORE LAUNCH! -->
+		<meta name="robots" content="noindex" />
 		<!-- Bootstrap -->
 		{% load staticfiles %}
 		<link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
