--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -81,13 +81,13 @@ html, body {
 	background-color: white;
 }
 
-.feature-legend .btn, .show-buildings .btn {
+.feature-legend .btn, .show-buildings .btn, .titlebox-control .btn {
 	border: 1px solid #999;
 	line-height: 1.3;
 	color: white;
 }
 
-.show-buildings .btn:hover {
+.show-buildings .btn:hover, .titlebox-control .btn:hover {
 	color: white;
 }
 
