--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -5,7 +5,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
-			<h2>Add Text About {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h2>
+			<h2>{% if user.is_staff %}Edit {{ document.author }}'s Submission About {% else %}Add Text About{% endif %} {% if feature.b_name %}{{ feature.b_name }}{% else %}{{ feature.address }}{% endif %}</h2>
 			<hr />
 		</div>
 	</div>
@@ -17,10 +17,15 @@
 				{{ form|crispy }}
 			</div>
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				<input type="submit" name="submit" value="Save Draft" class="btn btn-default"/>
-				<button class="btn btn-primary are_you_sure">Submit</button>
+				{% if user.is_staff %}
+					<button class="btn btn-primary approve">Save Changes</button>
+				{% else %}
+					<input type="submit" name="submit" value="Save Draft" class="btn btn-default"/>
+					<button class="btn btn-primary are_you_sure">Submit</button>
+				{% endif %}
 			</div>
 
+			<!-- Submit Modal -->
 			<div class="modal fade" id="submit_confirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
@@ -37,7 +42,27 @@
 			    		</div>
 			    	</div>
 				</div>
-			</div> <!-- / Submit Modal -->
+			</div> 
+			<!-- / Submit Modal -->
+
+			<!-- Approve Modal -->
+			<div class="modal fade" id="approve_confirm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h1>Approve this content?</h1>
+						</div>
+						<div class="modal-body">
+			        		<p>This content will be added to the map once it's been approved, and the contributor will be informed by email that it's been published.</p>
+			      		</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+							<input type="submit" name="publish" value="Approve" class="btn btn-primary"/>
+			    		</div>
+			    	</div>
+				</div>
+			</div> 
+			<!-- / Approve Modal -->
 
 		</form>
 	</div>
