--- a/templates/map/add_image.html
+++ b/templates/map/add_image.html
@@ -28,7 +28,7 @@
 							<h1>Have you finished editing?</h1>
 						</div>
 						<div class="modal-body">
-			        		<p>Once you've submitted your content it will be passed to the Survey of London team for moderation and you won't be able to edit it again.</p>
+			        		<p>Once you've submitted your content it will be passed to the Survey of London team for moderation and you won't be able to edit it again. Any images you submit to this site must either be yours, in the public domain, or uploaded with the permission of the copyright holder. See our <a href="#">Code of Conduct</a> for more information.</p>
 			        		<p>If you'd like to continue editing, click the close button below. Otherwise, click 'Submit' if you're happy with your contribution.</p>
 			      		</div>
 						<div class="modal-footer">
