--- a/templates/map/moderate_document.html
+++ b/templates/map/moderate_document.html
@@ -5,7 +5,11 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
 			<h2>Moderate {{ document.author }}'s Submission About <a href="{% url 'detail' document.feature.id %}">{% if document.feature.b_name %}{{ document.feature.b_name }}{% else %}{{ document.feature.address }}{% endif %}</a></h2>
-			<h3><span class="small">{{ document.author.email }}</span></h3>
+			<hr />
+			<h3>Submission Details</h3>
+			<p>Author Email: {{ document.author.email }}<br />
+			Created on {{ document.created }}<br />
+			Last Edited on {{ document.last_edited }}</p>
 			<hr />
 		</div>
 	</div>
