--- a/templates/map/moderate_image.html
+++ b/templates/map/moderate_image.html
@@ -5,7 +5,11 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
 			<h2>Moderate {{ image.author }}'s Submission About {% if image.feature.b_name %}{{ image.feature.b_name }}{% else %}{{ image.feature.address }}{% endif %}</h2>
-			<h3><span class="small">{{ image.author.email }}</span></h3>
+			<hr />
+			<h3>Submission Details</h3>
+			<p>Author Email: {{ image.author.email }}<br />
+			Created on {{ image.created }}<br />
+			Last Edited on {{ image.last_edited }}</p>
 			<hr />
 		</div>
 	</div>
