--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -125,7 +125,7 @@
 						{% for image in images %}
 						<div class="col-xs-12 col-sm-4 col-md-4">
 							<div class="item-card">
-								<a href="#" class="gallery_item" data-image="/media/{{ image.file }}" data-caption="{{ image.title }}" data-author="{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}"><img src="{% thumbnail image.file 265x175 crop='0,0' %}" alt="{{ image.caption }}"></a>
+								<a href="#" class="gallery_item" data-image="/media/{{ image.file }}" data-caption="{{ image.title }}" data-author="{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}" data-description="{{ image.description }}"><img src="{% thumbnail image.file 265x175 crop='0,0' %}" alt="{{ image.caption }}"></a>
 								<p>{{ image.title }}<br />Contributed by <a href="{% url 'all_content_by_author' image.author.id %}">{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}</a></p>
 							</div>
 						</div>	
@@ -187,8 +187,8 @@
 	        		<button type="button" class="btn btn-default lightbox_prev">Previous</button>
 	        		<button type="button" class="btn btn-default lightbox_next">Next</button>
       			</div>
-        		<p id="lightbox_caption"></p>
-        		<p id="lightbox_image_author" class="small"></p>
+        		<h4><em><span id="lightbox_caption"></span></em><br /><span class="small" id="lightbox_image_author"></span></h4>
+        		<p id="lightbox_description"></p>
       		</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -211,6 +211,7 @@
 			$('#lightbox_image').attr('src', $(images[index]).data('image'));
 			$('#lightbox_image').attr('alt', $(images[index]).data('caption'));
 			$('#lightbox_caption').html($(images[index]).data('caption'));
+			$('#lightbox_description').html($(images[index]).data('description'));
 			$('#lightbox_image_author').html('Submitted by ' + $(images[index]).data('author'));
 		}
 
@@ -223,6 +224,7 @@
 				$('#lightbox_image').attr('src', $(images[index]).data('image'));
 				$('#lightbox_image').attr('alt', $(images[index]).data('caption'));
 				$('#lightbox_caption').html($(images[index]).data('caption'));
+				$('#lightbox_description').html($(images[index]).data('description'));
 				$('#lightbox_image_author').html('Submitted by ' + $(images[index]).data('author'));
 		}
 
@@ -252,9 +254,11 @@
 		var image = $(this).data('image');
 		var caption = $(this).data('caption');
 		var author = $(this).data('author');
+		var description = $(this).data('description');
 		$('#lightbox_image').attr('src', image);
 		$('#lightbox_image').attr('alt', caption);
 		$('#lightbox_caption').html(caption);
+		$('#lightbox_description').html(description);
 		$('#lightbox_image_author').html('Submitted by ' + author);
 		// Create an array of all the images in teh gallery, get the index of the current image
 		var images = $('.gallery_item');
