--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -32,7 +32,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 			    <div class="navbar-header navbar-left">
-      				<a class="navbar-brand" href="/">Survey of London <span class="label label-primary" style="font-family: 'Helvetica', sans-serif;">beta</span></a>
+      				<a class="navbar-brand" href="/">Survey of London <span class="label label-primary" style="font-family: 'Helvetica', sans-serif;">Draft</span></a>
       				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
 				        <span class="sr-only">Toggle navigation</span>
 				        <span class="icon-bar"></span>
@@ -49,8 +49,8 @@
 	    						<li><a href="{% url 'user_overview' %}">Your Submissions</a></li>
 	    						<li><a href="{% url 'user_profile' %}">Edit Profile</a></li>
 							    {% if user.is_staff %}
-									<li><a href="{% url 'admin:index' %}">Go to Admin Site</a></li>
-									<li><a href="{% url 'dashboard' %}">Go to Moderation Dashboard</a></li>
+									<li><a href="{% url 'admin:index' %}" target="_blank">Admin Site</a></li>
+									<li><a href="{% url 'dashboard' %}">Dashboard</a></li>
 								{% endif %}
 							    <li role="separator" class="divider"></li>
 								<li><a href="{% url 'account_logout' %}">Logout</a></li>
