added logos to footer

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -87,7 +87,13 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-md-3">
+					<div class="col-xs-12 col-md-2">
+						<br />
+						<img src="{% static 'img/ucl_logo.gif' %}" alt="UCL Logo" style="width: 100px;"><br /><br />
+						<img src="{% static 'img/casa_logo.gif' %}" alt="Centre for Advanced Spatial Analysis Logo"><br /><br />
+						<img src="{% static 'img/bartlett_logo.gif' %}" alt="Bartlett Logo" style="width: 100px;">
+					</div>
+					<div class="col-xs-12 col-md-2">
 						<br />
 						<img src="{% static 'img/RGB-Portrait.gif' %}" alt="Arts and Humanities Research Council Logo" style="width: 100px;">
 						<hr />
